--- a/index.html
+++ b/index.html
@@ -34,16 +34,16 @@
             </span>
         </div>
         <ul class="nav-items">
-            <li><a href="#" class="nav-link">home</a></li>
-            <li><a href="#" class="nav-link">skills</a></li>
-            <li><a href="#" class="nav-link">about</a></li>
-            <li><a href="#" class="nav-link">products</a></li>
+            <li><a href="#home" class="nav-link">home</a></li>
+            <li><a href="#skills" class="nav-link">skills</a></li>
+            <li><a href="#about" class="nav-link">about</a></li>
+            <li><a href="#products" class="nav-link">products</a></li>
         </ul>
     </nav>
 
     <!-- end nav bar -->
     <!-- header -->
-    <header class="header">
+    <header id="home" class="header">
         <div class="banner">
             <h3 class="sub-title">Over one hundred flavors of tea</h3>
             <h1 class="title">SPECIALLY CRAFTED TEA</h1>
@@ -57,7 +57,7 @@
     <!-- end content divider -->
 
     <!-- skill section -->
-    <section class="skills">
+    <section id="skills" class="skills">
 
         <article class="skill">
             <span class="skill-icon">
@@ -90,7 +90,7 @@
     </section>
     <!-- end of skill section -->
     <!-- About tea section -->
-    <section class="about-tea">
+    <section id="about" class="about-tea">
 
         <div class="container ">
             <div class="row">
@@ -115,7 +115,7 @@
 
     <!-- end About tea section -->
     <!-- product section -->
-    <section id="product">
+    <section id="products">
         <div class="container">
             <div class="row">
                 <div class="col-xl-3 col-lg-10 col-md-8 my-3">
