--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
     <!-- end About tea section -->
     <!-- product section -->
-    <section id="products">
+    <section id="product">
         <div class="container">
             <div class="row">
                 <div class="col-xl-3 col-lg-10 col-md-8 my-3">
